name:                lazy-langevin
version:             0.2.0
synopsis:            Gradient-based diffusion.
homepage:            http://jtobin.github.com/lazy-langevin
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10
description:

    Sampling via gradient-based diffusion.

Source-repository head
  Type:     git
  Location: http://github.com/jtobin/lazy-langevin.git

library
  default-language: Haskell2010
  ghc-options:
      -Wall
  exposed-modules:
      Numeric.MCMC.Langevin
  build-depends:
      base < 5
    , lens
    , mcmc-types
    , mwc-probability
    , pipes
    , primitive
    , transformers

